[package]
name = "rtklib-sys"
version = "0.1.3"
rust-version = "1.82.0"
edition = "2018"
authors = ["Kevin Webb"]
license = "MIT"
description = "Native bindings to RTKLIB"
readme = "README.md"
repository = "https://github.com/kpwebb/rtklib-ffi"
keywords = [ "bindings", "ffi", "rocksdb" ]
categories = [ "api-bindings", "rtklib", "external-ffi-bindings" ]
links = "rtklib-ffi"

[features]
default = [ "rtcm3" ]
rtcm3 = []


[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.21"
